--- a/package.json
+++ b/package.json
@@ -2,25 +2,55 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android ",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "storybook": "start-storybook -p 7007",
+    "prestorybook": "rnstl"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-knobs": "^6.0.22",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.23",
+    "@storybook/cli": "^6.0.22",
+    "@storybook/react-native": "^5.3.23",
+    "@storybook/react-native-server": "^5.3.23",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "10.7.0",
+    "storybook": "^6.0.22"
   },
   "devDependencies": {
-    "react-native-web": "~0.13.7",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/storybook__react": "^5.2.1",
+    "husky": "^4.3.0",
+    "react-native-get-random-values": "^1.5.0",
+    "react-native-storybook-loader": "^2.0.2",
     "typescript": "~3.9.5"
   },
-  "private": true
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./storybook/stories"
+      ],
+      "pattern": "**/*.stories.tsx"
+    }
+  },
+  "private": true,
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
