--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@storybook/react-native": "^5.3.23",
     "@storybook/react-native-server": "^5.3.23",
     "expo": "~39.0.2",
+    "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
